# Detecting-Semantic-Concerns-in-Tangled-Code-Changes-Using-SLMs

./: app.py  pyproject.toml
.github/workflows/: ci.yml
RQ/: analyze.py  analyze_correlation.py  analyze_performance.py  compare_models.py  correlation_analysis.py  main.py  token_analysis.py  visualize.py  visualize_with_concern_count.py
RQ/GPT/: infer.py
RQ/Phi/: infer_huggingface.py  infer_lmstudio.py  train.py
RQ/Qwen/: infer_huggingface.py
RQ/analysis/: analyze.py  analyze_correlation.py  compare_models.py  efficiency_commit_message.py  efficiency_concern_count.py  efficiency_concern_count_input_token.py  efficiency_input_tokens.py
RQ/results_20250731/analysis/: results_table.csv  results_table_with_concern_count.csv
RQ/results_20250731/diff_only/: gpt-4.1-2025-04-14_1024.csv  gpt-4.1-2025-04-14_12288.csv  gpt-4.1-2025-04-14_2048.csv  gpt-4.1-2025-04-14_4096.csv  gpt-4.1-2025-04-14_8192.csv  gpt-4.1-2025-04-14_ONE_SHOT_1024.csv  gpt-4.1-2025-04-14_ONE_SHOT_12288.csv  gpt-4.1-2025-04-14_ONE_SHOT_2048.csv  gpt-4.1-2025-04-14_ONE_SHOT_4096.csv  gpt-4.1-2025-04-14_ONE_SHOT_8192.csv  gpt-4.1-2025-04-14_TWO_SHOT_1024.csv  gpt-4.1-2025-04-14_TWO_SHOT_12288.csv  gpt-4.1-2025-04-14_TWO_SHOT_2048.csv  gpt-4.1-2025-04-14_TWO_SHOT_4096.csv  gpt-4.1-2025-04-14_TWO_SHOT_8192.csv  microsoft_phi-4_1024.csv  microsoft_phi-4_12288.csv  microsoft_phi-4_2048.csv  microsoft_phi-4_4096.csv  microsoft_phi-4_8192.csv  qwen_qwen3-14b_One_shot_1024.csv  qwen_qwen3-14b_One_shot_12288.csv  qwen_qwen3-14b_One_shot_2048.csv  qwen_qwen3-14b_One_shot_4096.csv  qwen_qwen3-14b_One_shot_8192.csv  (+9 more)
__test__/: conftest.py  test_api.py  test_eval.py
datasets/: dataset_info.yaml  token_distribution_results.csv
datasets/data/: sampled_ccs_dataset.csv  tangled_ccs_dataset_test.csv
datasets/scripts/: add_reasoning_column.py  generate_tangled_commites.py  sample_atomic_commites.py  upload_to_huggingface.py
fine_tuning/: conver_to_gguf.py  requirements.txt  run_gguf_conversion.sh  run_training.sh  setup_env.sh  train.py
scripts/: clean_env.sh  run_gguf_conversion.sh  run_infer_huggingface.sh  run_infer_huggingface_qwen.sh  run_training.sh  setup_env.sh
temp/: stanage_inference_plan.md
utils/: __init__.py  eval.py  prompt.py
utils/llms/: __init__.py  constant.py  hugging_face.py  openai.py
visual_eval/: components.py
visual_eval/ui/: session.py  setup.py
(+38 files in other folders)
