[project]
name = "untangling-multi-concern-commits-using-slm"
version = "0.1.0"
description = "Concern is All You Need: Semantic Untangling with Small Language Models"
readme = "README.md"
authors = [
    { name = "gobeumsu", email = "gobeumsu@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    # Core ML/Data Libraries
    "transformers>=4.51.0",
    "datasets>=2.15.0",
    "pandas>=2.1.0",
    "numpy",
    # Hugging Face & API Clients
    "huggingface_hub>=0.25.0",
    "openai>=1.0.0",
    "aiohttp>=3.8.0",
    # Configuration & Utilities
    "pyyaml",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "tiktoken>=0.4.0",
    # Visualization
    "matplotlib",
    "seaborn",
    # Streamlit
    "streamlit>=1.28.0",
    "lmstudio",
    "accelerate>=0.25.0",
    # GGUF runtime
    "llama-cpp-python>=0.2.79",
]

[project.optional-dependencies]
dev = [
    "torch",
    "pytest>=7.4.0",
]
hpc = [
    "peft>=0.10.0",
    "trl>=0.8.0",
    "wandb>=0.16.0",
    "hf_transfer>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["utils", "visual_eval"]
